# xtensor-arrow-glib

./: Makefile.am  NOTICE.txt  README.md  configure.ac
doc/reference/: Makefile.am  xtensor-arrow-glib-docs.sgml  xtensor-glib-docs.sgml
test/: run-test.rb  run-test.sh  test-array.rb  test-arrow-array.rb  test-double-array.rb
xtensor-arrow-glib/: Makefile.am  arrow-array.cpp  arrow-array.h  double-array.cpp  double-array.h  double-array.hpp  xtensor-arrow-glib.h  xtensor-arrow-glib.hpp  xtensor-arrow-glib.pc.in
xtensor-glib/: Makefile.am  double-array.cpp  double-array.h  double-array.hpp  xarray.cpp  xarray.h  xarray.hpp  xtensor-glib.h  xtensor-glib.hpp  xtensor-glib.pc.in
